css/styles.css
.jumbotron {
text-align: center;
background-image: url(../img/veggies.jpg);
background-repeat: no-repeat;
background-position: center;
background-size: cover;
border-style: outset;
border-width: thick;
border-color: #E15E32;
border-radius: 20px;
font-family: 'Amatica SC', cursive;
}

.container-fluid {
padding-top: 15px;
}

.radio {
  padding-left: 20px;
}

.columns{
  column-count: 2;
  list-style: none;
}

.btn-outline-success{
  font-size: 30px;
  border-radius: 20%;
  padding: 32px 32px;
  background-color: #E15E32;
  border-style: outset;
  border-color: #E5F04C;
  border-width: thick;
  margin-left: auto;
  margin-right: auto;
  min-width: 150px;
  font-family: 'Pompiere', cursive;
}
/* centered columns styles */
.row-centered {
    text-align:center;
}
.col-centered {
    display:inline-block;
    float:none;
    /* reset the text-align */
    text-align:left;
    /* inline-block space fix */
    margin-right:-4px;
}

body {
  background-image: url(../img/cutting-board.jpg);
  background-size: auto;
  color: #fff;
  text-shadow: 4px 4px 6px #000;
}

h3 {
  text-align: center;
}

a {
  color: #fff;
}

#welcome {
  background: rgba(92,50,62,0.5);
  border-style: outset;
  border-width: thick;
  border-color: #E5F04C;
  border-radius: 20px;
  padding-top: 20px;
  padding-bottom: 20px;
  font-family: 'Amatica SC', cursive;
  font-size: 30px;
}

#instruction{
  background: rgba(92,50,62,0.5);
  border-style: outset;
  border-width: thick;
  border-color: #E5F04C;
  border-radius: 20px;
  padding-top: 10px;
  padding-bottom: 20px;
  max-width: 750px;
  font-family: 'Pompiere', cursive;
  font-size: 25px;
  font-weight: lighter;
}

#infoRow {
  display: none;
  font-family: 'Pompiere', cursive;
  font-size: 30px;
  font-weight: lighter;
}

#row1 {
  text-align: center;
}

#row2 {
  display: none;

}
#row3 {
  display: none;

}
#row4 {
  display: none;

}

#firstButton {
  font-size: 24px;
  border-radius: 50%;
  padding: 32px 32px;
  background-color: #E15E32;
  border-style: outset;
  border-color: #E5F04C;
  border-width: thick;
}

#baseStyles, #proteinStyles, #sauceStyles {
  margin: 0 auto;
  background: rgba(92,50,62,0.5);
  border-style: outset;
  border-width: thick;
  border-color: #E5F04C;
  border-radius: 20px;
  padding-top: 20px;
  padding-bottom: 20px;
  height: 261px;
  padding-top: 1px;
  padding-bottom: 50px;
  height: 320px;
  font-family: 'Pompiere', cursive;
  font-size: 25px;
  font-weight: lighter;
}

#veggieStyles {
  background: rgba(92,50,62,0.5);
  border-style: outset;
  border-width: thick;
  border-color: #E5F04C;
  border-radius: 20px;
  padding-top: 20px;
  padding-bottom: 20px;
  max-width: 750px;
  font-family: 'Pompiere', cursive;
  font-size: 25px;
  font-weight: lighter;
}

#outputStyles {
  background: rgba(92,50,62,0.5);
  border-style: outset;
  border-width: thick;
  border-color: #E5F04C;
  border-radius: 20px;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-left: 30px;
  max-width: 750px;
  font-family: 'Pompiere', cursive;
  font-size: 25px;
  font-weight: lighter;
}

#submitOrder {
  font-size: 24px;
  border-radius: 50%;
  padding: 32px 32px;
  background-color: #E15E32;
  border-style: outset;
  border-color: #E5F04C;
  border-width: thick
}

#kim-lan {
  background: rgba(92,50,62,0.5);
  border-style: outset;
  border-width: thick;
  border-color: #E5F04C;
  border-radius: 20px;
  padding-top: 20px;
  padding-bottom: 20px;
  font-family: 'Amatica SC', cursive;
  font-size: 20px;
  max-width: 475px;
  margin-left: 200px;
  margin-right: 200px;
  float: left;
}

#maria {
  background: rgba(92,50,62,0.5);
  border-style: outset;
  border-width: thick;
  border-color: #E5F04C;
  border-radius: 20px;
  padding-top: 20px;
  padding-bottom: 20px;
  font-family: 'Amatica SC', cursive;
  font-size: 20px;
  max-width: 475px;
  margin-left: 200px;
  margin-right: 200px;
  float: right;
}

#halle {
  background: rgba(92,50,62,0.5);
  border-style: outset;
  border-width: thick;
  border-color: #E5F04C;
  border-radius: 20px;
  padding-top: 20px;
  padding-bottom: 20px;
  font-family: 'Amatica SC', cursive;
  font-size: 20px;
  max-width: 475px;
  max-height: 475px;
  margin-left: 200px;
  margin-right: 200px;
  float: left;
}

#joe {
  background: rgba(92,50,62,0.5);
  border-style: outset;
  border-width: thick;
  border-color: #E5F04C;
  border-radius: 20px;
  padding-top: 20px;
  padding-bottom: 20px;
  font-family: 'Amatica SC', cursive;
  font-size: 20px;
  max-width: 475px;
  max-height: 750px;
  margin-right: 200px;
  margin-left: 200px;
  float: right;
}

#joesGithub {
  color: hotpink;
}

#bowl1 {
  border-radius: 100%;

}

/* Pulse Shrink */
@-webkit-keyframes hvr-pulse-shrink {
  to {
    -webkit-transform: scale(0.9);
    transform: scale(0.9);
  }
}
@keyframes hvr-pulse-shrink {
  to {
    -webkit-transform: scale(0.9);
    transform: scale(0.9);
  }
}
.hvr-pulse-shrink {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px transparent;
}
.hvr-pulse-shrink:hover, .hvr-pulse-shrink:focus, .hvr-pulse-shrink:active {
  -webkit-animation-name: hvr-pulse-shrink;
  animation-name: hvr-pulse-shrink;
  -webkit-animation-duration: 0.3s;
  animation-duration: 0.3s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}
/*BUZZ*/
@-webkit-keyframes hvr-buzz {
  50% {
    -webkit-transform: translateX(3px) rotate(2deg);
    transform: translateX(3px) rotate(2deg);
  }
  100% {
    -webkit-transform: translateX(-3px) rotate(-2deg);
    transform: translateX(-3px) rotate(-2deg);
  }
}
@keyframes hvr-buzz {
  50% {
    -webkit-transform: translateX(3px) rotate(2deg);
    transform: translateX(3px) rotate(2deg);
  }
  100% {
    -webkit-transform: translateX(-3px) rotate(-2deg);
    transform: translateX(-3px) rotate(-2deg);
  }
}
.hvr-buzz {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px transparent;
}
.hvr-buzz:hover, .hvr-buzz:focus, .hvr-buzz:active {
  -webkit-animation-name: hvr-buzz;
  animation-name: hvr-buzz;
  -webkit-animation-duration: 0.15s;
  animation-duration: 0.15s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

